--- a/html/main.html
+++ b/html/main.html
@@ -7,11 +7,16 @@
     <link rel="javascript" href="/js/hamburger.js">
     <title>Mariaplans bokhandel</title>
 </head>
+
+
 <body>
    <div id="wrapper">
     <header>
-        <a href="main.html"><img src="/img/ugglan logga.jpg" style="width: fr; height: 15vh;"></a>
-        <h1>Mariaplans</h1> <h1>Bokhandel</h1>
+        <a href="main.html"><img src="/img/ugglan logga.png" style="width: fr; height: 15vh;"></a>
+        <h1>Mariaplans Bokhandel </h1>
+
+    </header>
+<!--
         <div class="topnav">
             <a href="#home" class="active"><img src="/img/menyknapp.webp" alt=""></a>
             <div id="myLinks">
@@ -22,48 +27,49 @@
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a>
-          </div>
-    </header>
+          </div> !-->
     
     <main>
-        <article>Allmän info om bokhandeln</article>
+       <article>Allmän info om bokhandeln</article> 
     </main>
 
     <section>
-        <a href="sortiment.html">Barnböcker</a> 
-        <a href="sortiment.html">Pocket</a>
-        <a href="sortiment.html">Facklitteratur</a>
-        <a href="sortiment.html">Kokböcker</a>
-        <a href="sortiment.html">Pennor/Papper</a>
-        <a href="sortiment.html">Brädspel</a>
+       <a class="knapp" href="sortiment.html">Barnböcker</a> 
+        <a class="knapp" href="sortiment.html">Pocket</a>
+        <a class="knapp" href="sortiment.html">Facklitteratur</a>
+        <a class="knapp" href="sortiment.html">Kokböcker</a>
+        <a class="knapp" href="sortiment.html">Pennor/Papper</a>
+        <a class="knapp" href="sortiment.html">Brädspel</a> 
     </section>
    
     <div id="nyheter">
         <h2>Nyheter</h2>
-        <!--<div id="nyhetsblad">
-            <img src="/img/bokrea.jpg" alt="">
+       <div id="nyhetsblad">
+            <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
             <p>weoeow kolla de är bokrea på de här stället</p>
         </div>
         <div id="nyhetsblad">
-            <img src="/img/bokrea.jpg" alt="">
+            <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
             <p>weoeow kolla de är bokrea på de här stället</p>
         </div>
         <div id="nyhetsblad">
-            <img src="/img/bokrea.jpg" alt="">
+            <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
             <p>weoeow kolla de är bokrea på de här stället</p>
-        </div>-->
+        </div>
     </div>
 
     <div id="arbetare">
         <h2>Vi som jobbar här</h2>
-        <img src="/img/butiksägarna" alt="">
+        <img class="agare" src="/img/butiksägarna" alt="">
         <article>liten intervju med ägarna?</article>
     </div>
     
     <footer>
+        <p>
         kontakt:
         Hitta hit:
         copyrightinfo eller nåt idk
+        </p>
     </footer>
   </div>
 </body>
