--- a/html/sortiment.html
+++ b/html/sortiment.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="main.html"><img src="/img/ugglan logga.jpg" style="width: 100px; height: 100px;"></a>Mariaplans Bokhandel</h1>
+        <h1><a href="main.html"><img src="/img/ugglan logga.png" style="width: 100px; height: 100px;"></a>Mariaplans Bokhandel</h1>
     </header>
             
     <div id="genrer">
