--- a/html/historia.html
+++ b/html/historia.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="javascript" href="/js/hamburger.js">
     <title>Historia</title>
 </head>
+
+
 <body>
     <header>
-        <h1><a href="main.html"><img src="/img/ugglan logga.png" style="width: 100px; height: 100px;"></a>Mariaplans Bokhandel</h1>
+        <a href="main.html"><img src="/img/ugglan logga transparent.png" style="width: 30px;"></a>
+        <h1>Mariaplans Bokhandel </h1>
+        <a href="main.html" class="active"><img src="/img/menyknapp.png" style="height: 30px"></a>
     </header>
-            
+         
     <article>
         <img src="" alt="">
         <h2>Året var 1934...</h2>
