--- a/html/main.html
+++ b/html/main.html
@@ -12,9 +12,9 @@
 <body>
    <div id="wrapper">
     <header>
-        <a href="main.html"><img src="/img/ugglan logga.png" style="width: fr; height: 15vh;"></a>
+        <a href="main.html"><img src="/img/ugglan logga transparent.png" style="width: 30px;"></a>
         <h1>Mariaplans Bokhandel </h1>
-
+        <a href="main.html" class="active"><img src="/img/menyknapp.png" style="height: 30px"></a>
     </header>
 <!--
         <div class="topnav">
@@ -30,7 +30,12 @@
           </div> !-->
     
     <main>
-       <article>Allmän info om bokhandeln</article> 
+       <article class="maintext">
+        Allmän info om bokhandeln
+        Allmän info om bokhandeln
+        Allmän info om bokhandeln
+        Allmän info om bokhandeln
+       </article> 
     </main>
 
     <section>
