--- a/html/main.html
+++ b/html/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +11,13 @@
 
 
 <body>
-   <div id="wrapper">
-    <header>
-        <a href="main.html"><img src="/img/ugglan logga transparent.png" style="width: 30px;"></a>
-        <h1>Mariaplans Bokhandel </h1>
-        <a href="main.html" class="active"><img src="/img/menyknapp.png" style="height: 30px"></a>
-    </header>
-<!--
+    <div id="wrapper">
+        <header>
+            <a href="main.html"><img src="/img/ugglan logga transparent.png" style="width: 30px;"></a>
+            <h1>Mariaplans Bokhandel </h1>
+            <a href="main.html" class="active"><img src="/img/menyknapp.png" style="height: 30px"></a>
+        </header>
+        <!--
         <div class="topnav">
             <a href="#home" class="active"><img src="/img/menyknapp.webp" alt=""></a>
             <div id="myLinks">
@@ -28,54 +29,57 @@
               <i class="fa fa-bars"></i>
             </a>
           </div> !-->
-    
-    <main>
-       <article class="maintext">
-        Allmän info om bokhandeln
-        Allmän info om bokhandeln
-        Allmän info om bokhandeln
-        Allmän info om bokhandeln
-       </article> 
-    </main>
 
-    <section>
-       <a class="knapp" href="sortiment.html">Barnböcker</a> 
-        <a class="knapp" href="sortiment.html">Pocket</a>
-        <a class="knapp" href="sortiment.html">Facklitteratur</a>
-        <a class="knapp" href="sortiment.html">Kokböcker</a>
-        <a class="knapp" href="sortiment.html">Pennor/Papper</a>
-        <a class="knapp" href="sortiment.html">Brädspel</a> 
-    </section>
-   
-    <div id="nyheter">
-        <h2>Nyheter</h2>
-       <div id="nyhetsblad">
-            <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
-            <p>weoeow kolla de är bokrea på de här stället</p>
-        </div>
-        <div id="nyhetsblad">
-            <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
-            <p>weoeow kolla de är bokrea på de här stället</p>
-        </div>
-        <div id="nyhetsblad">
-            <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
-            <p>weoeow kolla de är bokrea på de här stället</p>
-        </div>
-    </div>
+        <main>
+            <article class="maintext">
+                <h3>Allmän info om bokhandeln</h3>
+                Allmän info om bokhandeln
+                Allmän info om bokhandeln
+                Allmän info om bokhandeln
+            </article>
+        </main>
 
-    <div id="arbetare">
-        <h2>Vi som jobbar här</h2>
-        <img class="agare" src="/img/butiksägarna" alt="">
-        <article>liten intervju med ägarna?</article>
+        <div id="sortiment_meny">
+            <section>
+                <a class="knapp" href="sortiment.html">Barnböcker</a>
+                <a class="knapp" href="sortiment.html">Pocket</a>
+                <a class="knapp" href="sortiment.html">Facklitteratur</a>
+                <a class="knapp" href="sortiment.html">Kokböcker</a>
+                <a class="knapp" href="sortiment.html">Pennor/Papper</a>
+                <a class="knapp" href="sortiment.html">Brädspel</a>
+            </section>
+        </div>
+
+        <div id="nyheter">
+            <h2>Nyheter</h2>
+            <div id="nyhetsblad">
+                <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
+                <p>weoeow kolla de är bokrea på de här stället</p>
+            </div>
+            <div id="nyhetsblad">
+                <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
+                <p>weoeow kolla de är bokrea på de här stället</p>
+            </div>
+            <div id="nyhetsblad">
+                <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
+                <p>weoeow kolla de är bokrea på de här stället</p>
+            </div>
+        </div>
+
+        <div id="arbetare">
+            <h2>Vi som jobbar här</h2>
+            <img class="agare" src="/img/butiksägarna" alt="">
+            <article>liten intervju med ägarna?</article>
+        </div>
+
+        <footer>
+            <p>
+                kontakt:
+                Hitta hit:
+                copyrightinfo eller nåt idk
+            </p>
+        </footer>
     </div>
-    
-    <footer>
-        <p>
-        kontakt:
-        Hitta hit:
-        copyrightinfo eller nåt idk
-        </p>
-    </footer>
-  </div>
 </body>
+
 </html>
