--- a/html/main.html
+++ b/html/main.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="javascript" href="/js/hamburger.js">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&display=swap" rel="stylesheet">
     <title>Mariaplans bokhandel</title>
 </head>
 
@@ -14,7 +17,7 @@
     <div id="wrapper">
         <header>
             <a href="main.html"><img src="/img/ugglan logga transparent.png" style="width: 30px;"></a>
-            <h1>Mariaplans Bokhandel </h1>
+            <h1>MARIAPLANS BOKHANDEL</h1>
             <a href="main.html" class="active"><img src="/img/menyknapp.png" style="height: 30px"></a>
         </header>
         <!--
@@ -42,16 +45,21 @@
         <div id="sortiment_meny">
             <section>
                 <a class="knapp" href="sortiment.html">Barnböcker</a>
-                <a class="knapp" href="sortiment.html">Pocket</a>
-                <a class="knapp" href="sortiment.html">Facklitteratur</a>
                 <a class="knapp" href="sortiment.html">Kokböcker</a>
-                <a class="knapp" href="sortiment.html">Pennor/Papper</a>
                 <a class="knapp" href="sortiment.html">Brädspel</a>
             </section>
         </div>
 
+        <div id="sortiment_meny2">
+            <section>
+                <a class="knapp" href="sortiment.html">Pocket</a>
+                <a class="knapp" href="sortiment.html">Pennor/Papper</a>
+                <a class="knapp" href="sortiment.html">Facklitteratur</a>
+            </section>
+        </div>
+
         <div id="nyheter">
-            <h2>Nyheter</h2>
+            <h2>NYHETER</h2>
             <div id="nyhetsblad">
                 <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
                 <p>weoeow kolla de är bokrea på de här stället</p>
@@ -67,7 +75,7 @@
         </div>
 
         <div id="arbetare">
-            <h2>Vi som jobbar här</h2>
+            <h2>VI SOM JOBBAR HÄR</h2>
             <img class="agare" src="/img/butiksägarna" alt="">
             <article>liten intervju med ägarna?</article>
         </div>
