--- a/html/sortiment.html
+++ b/html/sortiment.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="javascript" href="/js/hamburger.js">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&display=swap" rel="stylesheet">
     <title>Sortiment</title>
 </head>
 <body>
     <header>
         <a href="main.html"><img src="/img/ugglan logga transparent.png" style="width: 30px;"></a>
-        <h1>Mariaplans Bokhandel </h1>
+        <h1>MARIAPLANS BOKHANDEL</h1>
         <a href="main.html" class="active"><img src="/img/menyknapp.png" style="height: 30px"></a>
     </header>
             
-    <div id="genrer">
+    <div id="genre_barn">
         <h2>Barnböcker</h2>
         <div id="Bok">
             <h3>[Titel]</h3>
@@ -30,7 +33,7 @@
         </div>
     </div>
 
-    <div id="genrer">
+    <div id="genre_pocket">
         <h2>Pocketböcker</h2>
         <div id="Bok">
             <h3>[Titel]</h3>
@@ -46,7 +49,7 @@
         </div>
     </div>
 
-    <div id="genrer">
+    <div id="genre_fack">
         <h2>Facklitteratur</h2>
         <div id="Bok">
             <h3>[Titel]</h3>
@@ -62,7 +65,7 @@
         </div>
     </div>
 
-    <div id="genrer">
+    <div id="genre_kok">
         <h2>Kokböcker</h2>
         <div id="Bok">
             <h3>[Titel]</h3>
@@ -78,7 +81,7 @@
         </div>
     </div>
 
-    <div id="genrer">
+    <div id="genre_pop">
         <h2>Pennor och Papper</h2>
         <div id="Bok">
             <h3>[Titel]</h3>
@@ -94,7 +97,7 @@
         </div>
     </div>
 
-    <div id="genrer">
+    <div id="genre_spel">
         <h2>Brädspel</h2>
         <div id="Bok">
             <h3>[Titel]</h3>
