början på nyhetsmenyn

--- a/html/main.html
+++ b/html/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="javascript" href="/js/hamburger.js">
+    <link rel="stylesheet" href="/js/slider.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&display=swap" rel="stylesheet">
@@ -59,6 +60,8 @@
         </div>
 
         <div id="nyheter">
+            <button class="left-button-slide" onclick="plusDivs(-1)">&#10094;</button>
+            <button class="right-button-slide" onclick="plusDivs(+1)">&#10095;</button>
             <h2>NYHETER</h2>
             <div id="nyhetsblad">
                 <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
