jobb under lördag v.17

--- a/html/main.html
+++ b/html/main.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="javascript" href="/js/hamburger.js">
-    <link rel="stylesheet" href="/js/slider.js">
+    <link rel="stylesheet" href="/js/nyhetsslide.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&display=swap" rel="stylesheet">
@@ -60,21 +61,21 @@
         </div>
 
         <div id="nyheter">
-            <button class="left-button-slide" onclick="plusDivs(-1)">&#10094;</button>
-            <button class="right-button-slide" onclick="plusDivs(+1)">&#10095;</button>
             <h2>NYHETER</h2>
+            <button class="left-button-slide" onclick="plusDivs(-1)">&#10094;</button>
             <div id="nyhetsblad">
                 <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
-                <p>weoeow kolla de är bokrea på de här stället</p>
+                <p>nummer 1</p>
             </div>
             <div id="nyhetsblad">
                 <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
-                <p>weoeow kolla de är bokrea på de här stället</p>
+                <p>nummer 2</p>
             </div>
             <div id="nyhetsblad">
                 <img class="nyhetsbild" src="/img/bokrea.jpg" alt="">
-                <p>weoeow kolla de är bokrea på de här stället</p>
+                <p>nummer 3</p>
             </div>
+            <button class="right-button-slide" onclick="plusDivs(+1)">&#10095;</button>
         </div>
 
         <div id="arbetare">
